force-app/main/default/objects/Google_Config__mdt/Google_Config__mdt.object-meta.xml
<CustomObject>
    <label>Google Config</label>
    <pluralLabel>Google Configs</pluralLabel>
</CustomObject>