force-app/main/default/objects/Google_Config__mdt/fields/access_token__c.field-meta.xml
<CustomField>
    <fullName>access_token__c</fullName>
    <label>access token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>