force-app/main/default/objects/Google_Config__mdt/fields/auth_url__c.field-meta.xml
<CustomField>
    <fullName>auth_url__c</fullName>
    <defaultValue>&quot;https://accounts.google.com/o/oauth2/v2/auth&quot;</defaultValue>
    <label>auth url</label>
    <type>Url</type>
</CustomField>