force-app/main/default/objects/Google_Config__mdt/fields/scope__c.field-meta.xml
<CustomField>
    <fullName>scope__c</fullName>
    <label>scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>