force-app/main/default/objects/Google_Config__mdt/fields/token_url__c.field-meta.xml
<CustomField>
    <fullName>token_url__c</fullName>
    <defaultValue>&quot;https://oauth2.googleapis.com/token&quot;</defaultValue>
    <label>token url</label>
    <type>Url</type>
</CustomField>